bazel: Fix resource paths as external repo (see #3757)
- Headers that are included by .rc files need to be supplied to
  `declare_exe` via the `resources_deps` attribute (passed as the `deps
  attribute to `compile_rc`). The headers must be part of a cc_library
  target via either the `hdrs` or `srcs` attribute.
- File paths for CEF resources are prefixed with "external/<repo>"
  when CEF is loaded as an external repo. Update `copy_filegroups` to
  work with these paths.

--- a/tools/distrib/bazel/tests-cefclient-BUILD.bazel.in
+++ b/tools/distrib/bazel/tests-cefclient-BUILD.bazel.in
@@ -81,10 +81,10 @@ objc_library(
 # Windows targets.
 #
 
-# Allow access from the declare_exe target.
-filegroup(
+# Allow access to resource.h from the declare_exe target.
+cc_library(
     name = "ResourceH",
-    srcs = [
+    hdrs = [
         "browser/resource.h"
     ]
 )
