--- a/tools/distrib/bazel/tests-cefclient-win-BUILD.bazel
+++ b/tools/distrib/bazel/tests-cefclient-win-BUILD.bazel
@@ -43,11 +43,13 @@ declare_exe(
         "{}.exe.manifest".format(PRODUCT_NAME),
     ],
     resources_srcs = [
-        "{}:ResourceH".format(PKG_NAME),
         "{}:Resources".format(PKG_NAME),
         "{}.ico".format(PRODUCT_NAME),
         "small.ico",
         "//tests/shared:Resources",
+    ],
+    resources_deps = [
+        "{}:ResourceH".format(PKG_NAME),
     ],
     linkopts = [
         "/SUBSYSTEM:WINDOWS",
