--- a/tools/distrib/bazel/tests-cefsimple-win-BUILD.bazel
+++ b/tools/distrib/bazel/tests-cefsimple-win-BUILD.bazel
@@ -27,9 +27,11 @@ declare_exe(
         "{}.exe.manifest".format(PRODUCT_NAME),
     ],
     resources_srcs = [
-        "{}:ResourceH".format(PKG_NAME),
         "{}.ico".format(PRODUCT_NAME),
         "small.ico",
+    ],
+    resources_deps = [
+        "{}:ResourceH".format(PKG_NAME),
     ],
     linkopts = [
         "/SUBSYSTEM:WINDOWS",
