linux: Fix TLS error on dlopen of libcef.so (fixes #3616)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -730,5 +730,10 @@ patches = [
     # hidden menu items.
     # https://github.com/chromiumembedded/cef/issues/3577
     'name': 'ui_menu_model_3577'
+  },
+  {
+    # linux: Fix cannot allocate memory in static TLS block in dlopen libcef.so
+    # https://github.com/chromiumembedded/cef/issues/3616
+    'name': 'third_party_sentencepiece_3616'
   }
 ]
