bazel: Support <angled> includes of CEF headers (see #3757)
Fixes "file not found with <angled> include" errors.

--- a/tools/distrib/bazel/BUILD.bazel
+++ b/tools/distrib/bazel/BUILD.bazel
@@ -201,6 +201,8 @@ cc_library(
                "@platforms//os:windows": [":cef"],
                "//conditions:default": None,
            }),
+    # Support <angled> includes.
+    includes = ["./"],
 )
 
 # Only available on MacOS/Windows.
