--- a/tools/distrib/bazel/tests-cefsimple-BUILD.bazel.in
+++ b/tools/distrib/bazel/tests-cefsimple-BUILD.bazel.in
@@ -10,7 +10,8 @@ package(default_visibility = [
     ":__subpackages__",
 ])
 
-load("@rules_cc//cc:defs.bzl", "cc_library", "objc_library")
+load("//bazel:library_helpers.bzl", "declare_cc_library", "declare_objc_library")
+load("@rules_cc//cc:defs.bzl", "cc_library")
 
 #
 # Source file lists.
@@ -40,7 +41,7 @@ srcs_renderer_mac = [
 # MacOS targets.
 #
 
-objc_library(
+declare_objc_library(
     name = "BrowserLibMac",
     srcs = srcs_browser + srcs_browser_mac,
     target_compatible_with = [
@@ -51,7 +52,7 @@ objc_library(
     ],
 )
 
-cc_library(
+declare_cc_library(
     name = "RendererLibMac",
     srcs = srcs_renderer_mac,
     target_compatible_with = [
