Route Download bubble file open to OnOpenURLFromTab (fixes #3750)
Some downloaded file types [1] default to opening in a Browser. Open
requests for these file types originating from the Download bubble UI
should route to the source Browser (call OnOpenURLFromTab). If
OnOpenURLFromTab is unhandled proceed with the default Chrome behavior
of opening the URL in a new default Browser.

[1] PDF, html, etc. For the complete list of file types see
ChromeDownloadManagerDelegate::IsOpenInBrowserPreferredForFile.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -278,6 +278,10 @@ patches = [
   {
     # chrome: Support custom DownloadManagerDelegate handling.
     # https://github.com/chromiumembedded/cef/issues/3681
+    #
+    # chrome: Allow routing of Download bubble file open to non-Tabbed
+    # source browser.
+    # https://github.com/chromiumembedded/cef/issues/3750
     'name': 'chrome_browser_download',
   },
   {
