--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -739,5 +739,10 @@ patches = [
     # linux: Fix cannot allocate memory in static TLS block in dlopen libcef.so
     # https://github.com/chromiumembedded/cef/issues/3616
     'name': 'third_party_sentencepiece_3616'
+  },
+  {
+    # Windows: Add missing check in base/profiler/stack_copier.cc to fix
+    # compilation error of cef_sandbox.
+    'name': 'win_sandbox_stack_copier'
   }
 ]
