Update to Chromium version 130.0.6723.0 (#1356013)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -184,6 +184,11 @@ patches = [
     #
     # Route |parent_widget| to MenuHost for OSR context menu Widget creation.
     # https://github.com/chromiumembedded/cef/issues/3330
+    #
+    # Make views::View::GetHeightForWidth virtual so that it can be overridden
+    # by CefViewView. Alternately, we could implement the same functionality
+    # by removing CefViewDelegate::GetHeightForWidth and adding an optional
+    # |available_size| argument to CefViewDelegate::GetPreferredSize.
     'name': 'views_1749_2102_3330',
   },
   {
@@ -229,6 +234,13 @@ patches = [
     #
     # Linux: Fix duplicate symbol error for tab_network_state.cc
     # https://issuetracker.google.com/issues/353628440#comment8
+    #
+    # Linux: Fix duplicate symbol error for automation_manager_aura.cc
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5893679
+    #
+    # Linux: Fix duplicate symbol error for
+    # chrome_bluetooth_chooser_controller.cc
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5894080
     #
     # Avoid duplicate window from DevTools when CEF handles the open via
     # OnOpenURLFromTab.
@@ -741,8 +753,8 @@ patches = [
     'name': 'third_party_sentencepiece_3616'
   },
   {
-    # Windows: Add missing check in base/profiler/stack_copier.cc to fix
-    # compilation error of cef_sandbox.
-    'name': 'win_sandbox_stack_copier'
+    # win: Add missing <limits> include for cef_sandbox build.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5891459
+    'name': 'win_base_pa_oom_5891459'
   }
 ]
