cmake: Fix set_property argument (fixes #3775)

--- a/CMakeLists.txt.in
+++ b/CMakeLists.txt.in
@@ -142,7 +142,7 @@ set(CMAKE_CONFIGURATION_TYPES Debug Release)
 project(cef)
 
 # Use folders in the resulting project files.
-set_property(GLOBAL PROPERTY OS_FOLDERS ON)
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 
 #
