Fix dangling ptr in RenderProcessHostTaskProvider (fixes #3758)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -744,5 +744,11 @@ patches = [
     # Windows: Add missing check in base/profiler/stack_copier.cc to fix
     # compilation error of cef_sandbox.
     'name': 'win_sandbox_stack_copier'
+  },
+  {
+    # Fix dangling RenderProcessHost ptr in RenderProcessHostTaskProvider.
+    # https://github.com/chromiumembedded/cef/issues/3758
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5894650
+    'name': 'chrome_browser_task_manager_5894650'
   }
 ]
