Fix dangling ptr in RenderProcessHostTaskProvider (fixes #3758)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -756,5 +756,11 @@ patches = [
     # win: Add missing <limits> include for cef_sandbox build.
     # https://chromium-review.googlesource.com/c/chromium/src/+/5891459
     'name': 'win_base_pa_oom_5891459'
+  },
+  {
+    # Fix dangling RenderProcessHost ptr in RenderProcessHostTaskProvider.
+    # https://github.com/chromiumembedded/cef/issues/3758
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5894650
+    'name': 'chrome_browser_task_manager_5894650'
   }
 ]
