win: Add SHA256 impl for Sid::FromNamedCapability (fixes #3791)
The cef_sandbox build can't use the default BoringSSL implementation
so we add an alternative implementation using the Crypto API.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -518,6 +518,10 @@ patches = [
     # https://github.com/llvm/llvm-project/issues/57364
     #
     # Avoid usage of PartitionAlloc assertions (PA_BASE_CHECK) in raw_ptr.h.
+    #
+    # win: Add SHA256 implementation for Sid::FromNamedCapability using the
+    # Crypto API.
+    # https://github.com/chromiumembedded/cef/issues/3791
     'name': 'base_sandbox_2743',
   },
   {
