linux: Disable 'duplicate symbol' linker errors
These linker errors impact CEF builds but not Chromium builds due
to differences in application structure, and are becoming more
common with ongoing Chromium code refactoring.

When running via ASAN it may be necessary to set
`ASAN_OPTIONS=detect_odr_violation=0` to work around
https://github.com/google/sanitizers/issues/1017

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1608,14 +1608,19 @@ if (is_mac) {
       ]
     }
 
-    if (is_linux && !is_debug && !use_partition_alloc_as_malloc) {
-      # Only export necessary symbols from libcef.so.
-      # Don't do this in Debug builds because it causes the resulting
-      # application to crash.
-      # Also need to do this for ASAN builds to work around
-      # https://crbug.com/832808.
-      ldflags = [ "-Wl,--version-script=" +
-                  rebase_path("//cef/libcef_dll/libcef.lst") ]
+    if (is_linux) {
+      # Disable 'duplicate symbol' linker errors.
+      ldflags = [ "-Wl,--allow-multiple-definition" ]
+
+      if (!is_debug && !use_partition_alloc_as_malloc) {
+        # Only export necessary symbols from libcef.so.
+        # Don't do this in Debug builds because it causes the resulting
+        # application to crash.
+        # Also need to do this for ASAN builds to work around
+        # https://crbug.com/832808.
+        ldflags += [ "-Wl,--version-script=" +
+                     rebase_path("//cef/libcef_dll/libcef.lst") ]
+      }
     }
   }
 }
