Update to Chromium version 131.0.6778.0 (#1368529)

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1277,6 +1277,7 @@ make_pack_header("resources") {
     "$root_gen_dir/extensions/grit/extensions_resources.h",
     "$root_gen_dir/mojo/public/js/grit/mojo_bindings_resources.h",
     "$root_gen_dir/net/grit/net_resources.h",
+    "$root_gen_dir/third_party/blink/public/resources/grit/blink_image_resources.h",
     "$root_gen_dir/third_party/blink/public/resources/grit/blink_resources.h",
     "$root_gen_dir/ui/resources/grit/ui_resources.h",
     "$root_gen_dir/ui/resources/grit/webui_resources.h",
@@ -1307,6 +1308,7 @@ make_pack_header("resources") {
     "//extensions:extensions_resources_grd",
     "//mojo/public/js:resources",
     "//net:net_resources",
+    "//third_party/blink/public:image_resources",
     "//third_party/blink/public:resources",
     "//ui/resources:ui_resources_grd",
     "//ui/resources:webui_resources_grd",
@@ -1329,6 +1331,7 @@ make_pack_header("strings") {
     "$root_gen_dir/extensions/strings/grit/extensions_strings.h",
     "$root_gen_dir/services/strings/grit/services_strings.h",
     "$root_gen_dir/third_party/blink/public/strings/grit/blink_strings.h",
+    "$root_gen_dir/third_party/blink/public/strings/grit/permission_element_strings.h",
     "$root_gen_dir/ui/strings/grit/app_locale_settings.h",
     "$root_gen_dir/ui/strings/grit/auto_image_annotation_strings.h",
     "$root_gen_dir/ui/strings/grit/ui_strings.h",
@@ -1347,6 +1350,7 @@ make_pack_header("strings") {
     "//extensions/strings",
     "//services/strings",
     "//third_party/blink/public/strings",
+    "//third_party/blink/public/strings:permission_element_strings",
     "//ui/strings:app_locale_settings",
     "//ui/strings:auto_image_annotation_strings",
     "//ui/strings:ui_strings",
