win: Reland screen_1443650 changes (fixes #3489)
Use ScaleToRoundedRect instead of ScaleToEnclosedRect.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -630,6 +630,11 @@ patches = [
     'name': 'ui_views_widget_type'
   },
   {
+    # win/linux: Fix rounding errors with Screen[Win] DIP/pixel conversions.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1443650#c18
+    'name': 'screen_1443650'
+  },
+  {
     # mac: Keep bubble popups on-screen.
     # https://bugs.chromium.org/p/chromium/issues/detail?id=893292#c10
     'name': 'mac_platform_style_bubble_893292'
