Add notification for aborted popups (fixes #3776)
Pass a new |popup_id| parameter to OnBeforePopup and call a new
OnBeforePopupAborted callback if the popup is aborted before
OnAfterCreated is called for the popup browser. Add new
CefBrowserHost::GetBrowserByIdentifier and GetOpenerIdentifier
methods to assist with retrieval of associated browsers.

In cefclient, clean up state when a popup is aborted and close
any associated popup browsers when the opener browser is closed.
This also works when running with `--use-default-popup`.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -400,6 +400,9 @@ patches = [
     # Change ContentBrowserClient::ConfigureNetworkContextParams return type to
     # bool to support cancellation of NetworkContext creation during shutdown.
     # https://github.com/chromiumembedded/cef/issues/2985
+    #
+    # Add ContentBrowserClient::CreateWindowResult callback.
+    # https://github.com/chromiumembedded/cef/issues/3776
     'name': 'content_2015',
   },
   {
@@ -639,6 +642,9 @@ patches = [
     # Partially reverts the below changes.
     # https://chromium-review.googlesource.com/c/chromium/src/+/4829483
     # https://bugs.chromium.org/p/chromium/issues/detail?id=1470837#c22
+    #
+    # Add ContentBrowserClient::CreateWindowResult callback.
+    # https://github.com/chromiumembedded/cef/issues/3776
     'name': 'rfh_navigation_4829483'
   },
   {
