Update to Chromium version 132.0.6834.0

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -547,14 +547,6 @@ patches = [
     'name': 'browser_security_policy_1081397',
   },
   {
-    # Fix build errors with enable_background_mode=false.
-    # https://bugs.chromium.org/p/chromium/issues/detail?id=1100085
-    #
-    # Changes to support the Chrome runtime in CEF (app_controller_mac.mm).
-    # https://github.com/chromiumembedded/cef/issues/2969
-    'name': 'chrome_browser_background_mode_1100085',
-  },
-  {
     # Linux: Fix ATK assertion error when generating ARM build config.
     # https://bugs.chromium.org/p/chromium/issues/detail?id=1123214
     'name': 'linux_atk_1123214',
@@ -743,5 +735,16 @@ patches = [
     # linux: Fix cannot allocate memory in static TLS block in dlopen libcef.so
     # https://github.com/chromiumembedded/cef/issues/3616
     'name': 'third_party_sentencepiece_3616'
+  },
+  {
+    # linux: Fix error: invalid operands to binary expression.
+    'name': 'ui_base_x11_util'
+  },
+  {
+    # Add v8_used_in_shared_library GN arg to configure the
+    # V8_TLS_USED_IN_LIBRARY define.
+    # https://issues.chromium.org/issues/336738728
+    'name': 'v8_build',
+    'path': 'v8'
   }
 ]
