osr: Fix crash in RenderWidgetHostImpl::WasHidden (fixes #3834)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -518,6 +518,9 @@ patches = [
     # Add RenderWidgetHostImpl::SetCompositorForFlingScheduler to fix fling
     # scrolling in OSR mode.
     # https://github.com/chromiumembedded/cef/issues/2745
+    #
+    # Fix crash in RenderWidgetHostImpl::WasHidden when closing OSR browser.
+    # https://github.com/chromiumembedded/cef/issues/3834
     'name': 'osr_fling_2745',
   },
   {
