win: Disable use of Rust for JSON parsing with cef_sandbox

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -512,6 +512,10 @@ patches = [
     # win: Add SHA256 implementation for Sid::FromNamedCapability using the
     # Crypto API.
     # https://github.com/chromiumembedded/cef/issues/3791
+    #
+    # win: Disable use of Rust for JSON parsing with cef_sandbox.
+    # Enables the fallback to C++ that was removed in
+    # https://crrev.com/9ddc1624637c8cfa8ef50a95abd779e0ba4d67f6
     'name': 'base_sandbox_2743',
   },
   {
