Reduce the frequency of connection-related renderer crashes (see #3664)
- Use ResetWithReason to report intentional browser side disconnects of
  existing Mojo connections. Don't retry for those disconnects.
- Add set_disconnect_with_reason_and_result_handler in Chromium/Mojo to
  expose the MojoResult code for failed connections, allowing
  identification of connections that are intentionally unbound on the
  browser side.
- Optimize initial reconnect delay for known disconnect cases such as
  navigation-related and bfcache changes.
- Remove connection timeout and increase total connection deadline by
  100% to further reduce crash rates on slower machines.
- Only fail fatally for main frames (not sub-frames) in cases where the
  connection fails or disconnects for unknown reasons.
- Improve connection debug logging when running with
  `--enable-logging --vmodule=*frame*=1 --log-file=C:\temp\log.txt`

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -746,5 +746,10 @@ patches = [
     # linux: Fix cannot allocate memory in static TLS block in dlopen libcef.so
     # https://github.com/chromiumembedded/cef/issues/3616
     'name': 'third_party_sentencepiece_3616'
+  },
+  {
+    # Expose Mojo Connector error state to Receiver disconnect handlers.
+    # https://github.com/chromiumembedded/cef/issues/3664
+    'name': 'mojo_connect_result_3664'
   }
 ]
